--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             data-paddingbottom="[0,0,0,0" data-paddingleft="[0,0,0,0]" style="z-index: 16; white-space: nowrap;">引领社交信息革命
                         </div>
 
-                        <a href="https://avadar365.github.io/wp/AvadarWhitePaperCN.pdf" target="_self" class="tp-caption flat-button-slider bg-blue" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
+                        <a href="wp/AvadarWhitePaperCN.pdf" target="_self" class="tp-caption flat-button-slider bg-blue" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
                             data-x="['center','center','center','center']" data-hoffset="['-71','-71','-78','-78']" data-y="['middle','middle','middle','middle']"
                             data-voffset="['87','87','87','87']" data-width="['auto']" data-height="['auto']" style="z-index: 3;">白皮书
                         </a>
