--- a/index.html
+++ b/index.html
@@ -73,7 +73,22 @@
                                 <nav id="mainnav" class="mainnav">
                                     <ul class="menu">
                                         <li>
-                                            <a href="index.html">首页</a>
+                                            <a href="#home">首页</a>
+                                        </li>
+                                        <li>
+                                            <a href="#desc">简介</a>
+                                        </li>
+                                        <li>
+                                            <a href="#back">行业背景</a>
+                                        </li>
+                                        <li>
+                                            <a href="#creative">技术创新</a>
+                                        </li>
+                                        <li>
+                                            <a href="#tech">技术优势</a>
+                                        </li>
+                                        <li>
+                                            <a href="#value">投资价值</a>
                                         </li>
                                     </ul>
                                     <!-- /.menu -->
@@ -120,6 +135,17 @@
                             data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":1000,"speed":2000,"frame":"0","from":"y:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
                             data-textAlign="['center','center','center','center']" data-paddingtop="[10,10,10,10]" data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[0,0,0,0" data-paddingleft="[0,0,0,0]" style="z-index: 16; white-space: nowrap;">引领社交信息革命
+                        </div>
+
+                        <!-- LAYER NR. 13 -->
+                        <div class="tp-caption sub-title" id="slide-3049-layer-4" data-x="['center','center','center','center']" data-hoffset="['2','2','2','2']"
+                            data-y="['middle','middle','middle','middle']" data-voffset="['-6','-6','-6','-6']" data-fontsize="['16',16','16','14']"
+                            data-lineheight="['28','28','22','16']" data-fontweight="['200','200','200','200']" data-width="['800',800','800','450']"
+                            data-height="none" data-whitespace="['nowrap',normal','normal','normal']" data-type="text" data-responsive_offset="on"
+                            data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
+                            data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
+                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 17; white-space: nowrap;">我们专注于实现加密数字货币的社交网络
+                            
                         </div>
 
                         <a href="wp/AvadarWhitePaperCN.pdf" target="_self" class="tp-caption flat-button-slider bg-blue" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
@@ -170,7 +196,7 @@
         </div>
         <!-- END REVOLUTION SLIDER -->
 
-        <section class="flat-row v10">
+        <section class="flat-row v10" id="desc">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -204,7 +230,9 @@
                                     <a href="#">人工智能</a>
                                 </h5>
                                 <div class="sub-title">
-                                    未来平台将采用人工智能自动分析社交信息。自动分析用户的喜好和关注，从广博的社交信息海洋中向用户推荐合适合理的社交信息。
+                                    未来平台将采用人工智能自动分析社交信息。
+                                    <br/>自动分析用户的喜好和关注。
+                                    <br/>从广博的社交信息海洋中向用户推荐合适合理的社交信息。
                                 </div>
                             </div>
                             <!-- /.contetn-post -->
@@ -227,7 +255,7 @@
             </div>
         </section>
 
-        <section class="flat-row v1 parallax parallax2 wrap-contact">
+        <section class="flat-row v1 parallax parallax2 wrap-contact" id="back">
             <div class="container">
                 <div class="overlay"></div>
                 <div class="row">
@@ -248,7 +276,7 @@
             <!-- /.container -->
         </section>
 
-        <section class="flat-row v8">
+        <section class="flat-row v8" id="creative">
             <div class="container">
 
                 <div class="row">
@@ -267,7 +295,7 @@
                                 <h2 class="title-post">
                                     <a href="#">基于区块链技术</a>
                                 </h2>
-                                <p>阿瓦达采用了区块链技术，因此这个平台天然地拥有区块链技术所能带来的一切优势：没有中心机构控制、无需信任、高安全性、匿名性、用户完全的控制权等等。</p>
+                                <p>采用了区块链技术，因此平台天然拥有区块链技术所能带来的一切优势：没有中心机构控制、无需信任、高安全性、匿名性、用户完全的控制权等等。</p>
                             </div>
                             <!-- /.contetn-post -->
                         </article>
@@ -291,7 +319,9 @@
                                 <h2 class="title-post">
                                     <a href="#">人工智能</a>
                                 </h2>
-                                <p>自动分析用户的喜好和关注，从广博的社交信息海洋中向用户推荐合适合理的社交信息。</p>
+                                <p>自动分析用户的喜好和关注。
+                                    <br/> 从广博的社交信息海洋中向用户推荐合适合理的社交信息。
+                                </p>
                             </div>
                             <!-- /.contetn-post -->
                         </article>
@@ -300,7 +330,7 @@
             </div>
         </section>
 
-        <section class="flat-row v9">
+        <section class="flat-row v9" id="tech">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -398,7 +428,7 @@
             </div>
         </section>
 
-        <section class="flat-row v8">
+        <section class="flat-row v8" id="value">
             <div class="container">
 
                 <div class="row">
@@ -450,7 +480,7 @@
                                 <h2 class="title-post">
                                     <a href="#">生态网络</a>
                                 </h2>
-                                <p> 阿瓦达平台上可以构建社交生态体系，阿瓦作为社交信息平台的内生数字货币，可以购买社交信息服务，作为流通货币。随着用户群体不断增加，阿瓦价格会逐步上升。
+                                <p> 可以构建社交生态体系，作为社交信息平台的内生数字货币/流通货币，阿瓦价格会逐步上升。
                                 </p>
                             </div>
                             <!-- /.contetn-post -->
@@ -459,7 +489,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
