--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <nav id="mainnav" class="mainnav">
                                     <ul class="menu">
                                         <li>
-                                            <a href="#home">首页</a>
+                                            <a href="#header">首页</a>
                                         </li>
                                         <li>
                                             <a href="#desc">简介</a>
@@ -145,13 +145,17 @@
                             data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
                             data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 17; white-space: nowrap;">我们专注于实现加密数字货币的社交网络
-                            
+
                         </div>
 
                         <a href="wp/AvadarWhitePaperCN.pdf" target="_self" class="tp-caption flat-button-slider bg-blue" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
                             data-x="['center','center','center','center']" data-hoffset="['-71','-71','-78','-78']" data-y="['middle','middle','middle','middle']"
-                            data-voffset="['87','87','87','87']" data-width="['auto']" data-height="['auto']" style="z-index: 3;">白皮书
+                            data-voffset="['87','87','87','87']" data-width="['auto']" data-height="['auto']" style="z-index: 3;">白皮书下载
                         </a>
+                        <a href="wp/Avadar-Wallet.zip" target="_self" class="tp-caption flat-button-slider bg-white" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
+                        data-x="['center','center','center','center']" data-hoffset="['73','73','73','78']" data-y="['middle','middle','middle','middle']"
+                        data-voffset="['87','87','87','87']" data-width="['auto']" data-height="['auto']" style="z-index: 3;">钱包下载
+                    </a
                         <!-- END LAYER LINK -->
 
                     </li>
@@ -186,7 +190,11 @@
 
                         <a href="wp/AvadarWhitePaperCN.pdf" target="_self" class="tp-caption flat-button-slider bg-blue" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
                             data-x="['center','center','center','center']" data-hoffset="['-71','-71','-71','-78']" data-y="['middle','middle','middle','middle']"
-                            data-voffset="['87','87','87','87']" data-width="['auto']" data-height="['auto']" style="z-index: 3;">白皮书
+                            data-voffset="['87','87','87','87']" data-width="['auto']" data-height="['auto']" style="z-index: 3;">白皮书下载
+                        </a>
+                        <a href="wp/Avadar-Wallet.zip" target="_self" class="tp-caption flat-button-slider bg-white" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
+                            data-x="['center','center','center','center']" data-hoffset="['73','73','73','78']" data-y="['middle','middle','middle','middle']"
+                            data-voffset="['87','87','87','87']" data-width="['auto']" data-height="['auto']" style="z-index: 3;">钱包下载
                         </a>
                         <!-- END LAYER LINK -->
 
@@ -497,22 +505,12 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="widget widget-infomation">
                             <h3 class="logo-footer">
-                                <a href="index.html">SPECIALIST</a>
+                                <a href="#">联系方式</a>
                             </h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                                labore et dolore magna aliqua.</p>
+                            <p>官网：https://avadar365.github.io</p>
                             <ul class="flat-information">
-                                <li class="phone">
-                                    <a href="#">258-556-189</a>
-                                </li>
-                                <li class="address">
-                                    <a href="#">John Doe, 123 Main St Chicago</a>
-                                </li>
                                 <li class="email">
-                                    <a href="#">info@greenorganic.com</a>
-                                </li>
-                                <li class="skype">
-                                    <a href="#">specialist</a>
+                                    <a href="mailto:avadar@126.com">avadar@126.com</a>
                                 </li>
                             </ul>
                         </div>
@@ -521,96 +519,24 @@
 
                     <div class="col-md-3 col-sm-6">
                         <div class="widget widget-out-link">
-                            <h4 class="widget-title">Our Links</h4>
-                            <ul class="one-half">
-                                <li>
-                                    <a href="#">Home</a>
-                                </li>
-                                <li>
-                                    <a href="#">About Us</a>
-                                </li>
-                                <li>
-                                    <a href="#">Services</a>
-                                </li>
-                                <li>
-                                    <a href="#">Pages</a>
-                                </li>
-                                <li>
-                                    <a href="#">Projects</a>
-                                </li>
-                            </ul>
-                            <ul class="one-half">
-                                <li>
-                                    <a href="#">News</a>
-                                </li>
-                                <li>
-                                    <a href="#">Shop</a>
-                                </li>
-                                <li>
-                                    <a href="#">Contact</a>
-                                </li>
-                                <li>
-                                    <a href="#">Support</a>
-                                </li>
-                            </ul>
+                            <h4 class="widget-title">微信：hjttj0502</h4>
+                            <img src="images/wechat.png" width="100" alt="image">
+                            <h4 class="widget-title">QQ群：251889046</h4>
+                            <img src="images/qq.png" width="100" alt="image">
                         </div>
                     </div>
                     <!-- /.col-md-3 -->
 
                     <div class="col-md-3 col-sm-6">
                         <div class="widget widget-recent-new">
-                            <h4 class="widget-title">Recent News</h4>
-                            <ul class="popular-new">
-                                <li>
-                                    <div class="thumb">
-                                        <img src="images/popular/1.jpg" alt="image">
-                                    </div>
-                                    <div class="text">
-                                        <h6>
-                                            <a href="#">Why Executec - Our Expertise</a>
-                                        </h6>
-                                        <span>11 Fer , 2017</span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="thumb">
-                                        <img src="images/popular/2.jpg" alt="image">
-                                    </div>
-                                    <div class="text">
-                                        <h6>
-                                            <a href="#">Creating Business Value.</a>
-                                        </h6>
-                                        <span>11 Fer , 2017</span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="thumb">
-                                        <img src="images/popular/3.jpg" alt="image">
-                                    </div>
-                                    <div class="text">
-                                        <h6>
-                                            <a href="#">Business Planning Series</a>
-                                        </h6>
-                                        <span>11 Fer , 2017</span>
-                                    </div>
-                                </li>
-                            </ul>
                         </div>
                     </div>
                     <!-- /.col-md-3 -->
 
                     <div class="col-md-3 col-sm-6">
                         <div class="widget widget-letter">
-                            <h4 class="widget-title">Newsletter</h4>
-                            <p class="info-text">Subscribe our newsletter gor get notification about new updates, information discount,</p>
-                            <form novalidate="" class="subscribe-form" id="subscribeform" method="post" action="#">
-                                <p class="comment-form-email">
-                                    <input type="email" placeholder="Enter Your Email" size="30" value="" name="email" id="emailsubscribe">
-                                </p>
-                                <p class="form-submit">
-                                    <button class="flat-btn comment-submit">SUBSCRIBE</button>
-                                </p>
-                            </form>
+                            <h4 class="widget-title">LOGO</h4>
+                            <img src="images/webwxgetmsgimg.jpg" width="100" alt="image">
                         </div>
                     </div>
                     <!-- /.col-md-3 -->
@@ -624,37 +550,9 @@
         <div class="bottom">
             <div class="container">
                 <div class="copyright">
-                    <p>Copyright &copy; 2017.Company name All rights reserved.
-                        <a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
+                    <p>Copyright &copy; 2017.AVADAR All rights reserved.
                     </p>
                 </div>
-                <ul class="social-links">
-                    <li>
-                        <a href="#">
-                            <i class="social_facebook"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="social_twitter"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="social_vimeo"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="social_instagram"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="social_skype"></i>
-                        </a>
-                    </li>
-                </ul>
             </div>
             <!-- /.container -->
         </div>
