--- a/index.html
+++ b/index.html
@@ -153,10 +153,9 @@
                             data-voffset="['87','87','87','87']" data-width="['auto']" data-height="['auto']" style="z-index: 3;">白皮书下载
                         </a>
                         <a href="wp/Avadar-Wallet.zip" target="_self" class="tp-caption flat-button-slider bg-white" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
-                        data-x="['center','center','center','center']" data-hoffset="['73','73','73','78']" data-y="['middle','middle','middle','middle']"
-                        data-voffset="['87','87','87','87']" data-width="['auto']" data-height="['auto']" style="z-index: 3;">钱包下载
-                    </a
-                        <!-- END LAYER LINK -->
+                            data-x="['center','center','center','center']" data-hoffset="['73','73','73','78']" data-y="['middle','middle','middle','middle']"
+                            data-voffset="['87','87','87','87']" data-width="['auto']" data-height="['auto']" style="z-index: 3;">钱包下载
+                        </a <!-- END LAYER LINK -->
 
                     </li>
 
@@ -521,14 +520,15 @@
                         <div class="widget widget-out-link">
                             <h4 class="widget-title">微信：hjttj0502</h4>
                             <img src="images/wechat.png" width="100" alt="image">
-                            <h4 class="widget-title">QQ群：251889046</h4>
-                            <img src="images/qq.png" width="100" alt="image">
+
                         </div>
                     </div>
                     <!-- /.col-md-3 -->
 
                     <div class="col-md-3 col-sm-6">
                         <div class="widget widget-recent-new">
+                            <h4 class="widget-title">QQ群：251889046</h4>
+                            <img src="images/qq.png" width="100" alt="image">
                         </div>
                     </div>
                     <!-- /.col-md-3 -->
