--- a/index.html
+++ b/index.html
@@ -510,6 +510,8 @@
                             <ul class="flat-information">
                                 <li class="email">
                                     <a href="mailto:avadar@126.com">avadar@126.com</a>
+                                    <h4 class="widget-title">QQ   群：251889046</h4>
+                                    <h4 class="widget-title">微信小秘：hjttj0502</h4>
                                 </li>
                             </ul>
                         </div>
@@ -535,7 +537,7 @@
 
                     <div class="col-md-3 col-sm-6">
                         <div class="widget widget-letter">
-                            <h4 class="widget-title">LOGO</h4>
+                            <!-- h4 class="widget-title">LOGO</h4 -->
                             <img src="images/webwxgetmsgimg.jpg" width="100" alt="image">
                         </div>
                     </div>
