--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <!-- Header -->
         <header id="header" class="header header-classic clearfix">
-            <section  id="head1"></section>
+            <section  id="home"></section>
             <div class="container">
                 <div class="row">
                     <div class="header-wrap clearfix">
@@ -74,7 +74,7 @@
                                 <nav id="mainnav" class="mainnav">
                                     <ul class="menu">
                                         <li>
-                                            <a href="#head1">首页</a>
+                                            <a href="#home">首页</a>
                                         </li>
                                         <li>
                                             <a href="#desc">简介</a>
