--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             </div>
         </header>
         <!-- /.header -->
-
+        <section  id="home">
         <div id="rev_slider_1078_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container slide-overlay" data-alias="classic4export"
             data-source="gallery" style="margin:0px auto;background-color:transparent;padding:0px;margin-top:0px;margin-bottom:0px;">
-            <section  id="home"></section>
+
             <!-- START REVOLUTION SLIDER 5.3.0.2 auto mode -->
             <div id="rev_slider_1078_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.3.0.2">
                 <div class="slotholder"></div>
@@ -202,7 +202,7 @@
             </div>
         </div>
         <!-- END REVOLUTION SLIDER -->
-
+    </section>
         <section class="flat-row v10" id="desc">
             <div class="container">
                 <div class="row">
